added sidebar cart functionality

--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
@@ -76,7 +76,7 @@
                                 <a href="wishlist.html"><i class="fa fa-heart-o"></i></a>
                             </div>*@
                             <div class="same-style cart-wrap">
-                                <a href="#" class="cart-active">
+                                <a href="#" class="cart-active" id="cartSidebarToggle">
                                     <i class="dlicon shopping_bag-20"></i>
                                     @*<span class="count-style">0</span>*@
                                 </a>
