wip on customer management dashboard

--- a/ASPCORE_RML_XCast_Store/Views/Shop/OrderPlaced.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shop/OrderPlaced.cshtml
@@ -14,7 +14,7 @@
                             <h3>Ваш заказ успешно оформлен!</h3>
                             <p>Вы можете просмотреть текущий статус заказа во вкладке управления заказами в вашем личном кабинете.</p>
                             <div class="btn-style-1 text-center">
-                                <a class="btn-border-black2" asp-action="Index" asp-asp-controller="CustomerAccount">
+                                <a class="btn-border-black2" asp-action="Index" asp-controller="CustomerAccount">
                                     <div class="btn-viewmore-normal btn-ptb-3 btn-viewmore-bg-transparent btn-viewmore-common btn-font-3">
                                         <span>В личный кабинет</span>
                                     </div>
