implemented customer dashboard
Added:
1) Order management
2) Account management

--- a/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/Shared/Components/Header/Default.cshtml
@@ -48,7 +48,7 @@
 
                                     @if (isSignedIn)
                                         {
-                                        <li><a>Аккаунт <i class="fa fa-angle-down"></i> </a>
+                                        <li><a asp-action="Index" asp-controller="CustomerAccount">Аккаунт <i class="fa fa-angle-down"></i> </a>
                                             <ul class="sub-menu-width">
                                         <li><a href="javascript:void(0);" onclick="document.getElementById('LogoutForm').submit()">Выйти с аккаунта</a></li>
                                     </ul>
