--- a/ASPCORE_RML_XCast_Store/Views/CustomerAccount/Index.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/CustomerAccount/Index.cshtml
@@ -27,6 +27,8 @@
     <div class="container">
         <div class="row flex-row-reverse">
             <div class="col-lg-12">
+                <form method="post" asp-action="Logout" asp-controller="Account" id="LogoutForm">
+                </form>
                 <div class="myaccount-tab-menu nav" role="tablist">
                     <a href="#dashboad" class="active" data-bs-toggle="tab">
                         Дашборд
@@ -34,7 +36,7 @@
                     <a href="#orders" data-bs-toggle="tab"> Заказы</a>
                     @*<a href="#address-edit" data-bs-toggle="tab"> address</a>*@
                     <a href="#account-info" data-bs-toggle="tab"> Настройки аккаунта</a>
-                    <a href="login-register.html"> Выход</a>
+                    <a href="javascript:void(0);" onclick="document.getElementById('LogoutForm').submit()"> Выход</a>
                 </div>
                 <!-- My Account Tab Menu End -->
                 <!-- My Account Tab Content Start -->
@@ -43,7 +45,7 @@
                     <div class="tab-pane fade show active" id="dashboad" role="tabpanel">
                         <div class="myaccount-content">
                             <div class="welcome">
-                                <p>Hello, <strong>@Model.FirstName @Model.LastName</strong></p>
+                                <p>Привет, <strong>@Model.FirstName @Model.LastName</strong></p>
                             </div>
                             <p class="mb-0">С помощью этой панели вы можете просматривать ваши заказы и управлять данными Вашего аккаунта.</p>
                         </div>
@@ -134,52 +136,33 @@
                     <div class="tab-pane fade" id="account-info" role="tabpanel">
                         <div class="myaccount-content">
                             <div class="account-details-form">
-                                <form action="#">
-                                    @*<div class="row">
-                                        <div class="col-lg-6">
-                                            <div class="single-input-item">
-                                                <label for="first-name" class="required">First Name <span>*</span></label>
-                                                <input type="text" id="first-name" />
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <div class="single-input-item">
-                                                <label for="last-name" class="required">Last Name <span>*</span></label>
-                                                <input type="text" id="last-name" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="single-input-item">
-                                        <label for="display-name" class="required">Display Name <span>*</span></label>
-                                        <input type="text" id="display-name" />
-                                    </div>
-                                    <div class="single-input-item">
-                                        <label for="email" class="required">Email Addres <span>*</span></label>
-                                        <input type="email" id="email" />
-                                    </div>*@
+                                <form asp-action="ChangePassword" asp-controller="CustomerAccount">
                                     <fieldset>
-                                        <legend>Password change</legend>
+                                        <legend>Смена пароля</legend>
                                         <div class="single-input-item">
-                                            <label for="current-pwd" class="required">Current password (leave blank to leave unchanged)</label>
-                                            <input type="password" id="current-pwd" />
+                                            <label for="current-pwd" class="required">Текущий пароль</label>
+                                            <input type="password" asp-for="CustomerChangePasswordViewModel.CurrentPassword" id="current-pwd" />
+                                            <span asp-validation-for="CustomerChangePasswordViewModel.CurrentPassword" class="text-danger"></span>
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="single-input-item">
-                                                    <label for="new-pwd" class="required">New password (leave blank to leave unchanged)</label>
-                                                    <input type="password" id="new-pwd" />
+                                                    <label for="new-pwd" class="required">Новый пароль</label>
+                                                    <input type="password" asp-for="CustomerChangePasswordViewModel.NewPassword" id="new-pwd" />
+                                                    <span asp-validation-for="CustomerChangePasswordViewModel.NewPassword" class="text-danger"></span>
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
                                                 <div class="single-input-item">
-                                                    <label for="confirm-pwd" class="required">Confirm new password</label>
-                                                    <input type="password" id="confirm-pwd" />
+                                                    <label for="confirm-pwd" class="required">Потвердите новый пароль</label>
+                                                    <input type="password" asp-for="CustomerChangePasswordViewModel.NewPasswordRepeat" id="confirm-pwd" />
+                                                    <span asp-validation-for="CustomerChangePasswordViewModel.NewPasswordRepeat" class="text-danger"></span>
                                                 </div>
                                             </div>
                                         </div>
                                     </fieldset>
                                     <div class="single-input-item">
-                                        <button class="check-btn sqr-btn ">Save Changes</button>
+                                        <button class="check-btn sqr-btn" type="submit">Сохранить изменения</button>
                                     </div>
                                 </form>
                             </div>
@@ -192,5 +175,6 @@
 </div>
 
 @section Scripts{
+    @await Html.PartialAsync("_ValidationScriptsPartial")
 
 }
