--- a/ASPCORE_RML_XCast_Store/Views/AdminProducts/CreateProduct.cshtml
+++ b/ASPCORE_RML_XCast_Store/Views/AdminProducts/CreateProduct.cshtml
@@ -146,7 +146,6 @@
     <script src="~/sash/plugins/fancyuploder/fancy-uploader.js"></script>
 
     <!-- MULTI SELECT JS-->
-    <script src="~/sash/plugins/multipleselect/multiple-select.js"></script>
-    <script src="~/sash/plugins/multipleselect/multi-select.js"></script>
-
+    <script src="~/sash/plugins/multipleselect/multiple-select.js" asp-append-version="true"></script>
+    <script src="~/sash/plugins/multipleselect/multi-select.js" asp-append-version="true"></script>
 }
